# inf-preparation-2-DanielY19

./: CMakeLists.txt  README.md
Prep1/src/: solution.h  task1.cpp  task2.cpp
Prep1/test/: tests.cpp
task1/solution/: solution.h
task1/test/: unit-tests.cpp
task2/src/: solution.cpp  solution.h
task2/tests/: unit-tests.cpp
